fixing up CSS on ios res/show page. i think we can clean a lot of this up...

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -93,6 +93,7 @@ a:hover.btn-danger {
 
 .container-fluid {
   position: relative;
+  height: 100%;
   max-width: 1200px !important;
   min-width: 400px !important;
 }
@@ -109,6 +110,7 @@ a:hover.btn-danger {
   top: 100px;
   left: 0;
   right: 0;
+  height: 100%;
   @media (max-width: $navbarCollapseWidth) {
     top: 50px;
   }
